# gunnchAI3k

./: .gitignore  ALL_HANDS_ON_DECK_SUMMARY.md  APPLE_MUSIC_SETUP.md  BOT_ABSORPTION_GUIDE.md  EMERGENCY_STUDY_README.md  FINAL_ACCOMPLISHMENT_SUMMARY.md  GITHUB_ACTIONS_FIX_SUMMARY.md  JARVIS_COMPLETE_SUMMARY.md  JARVIS_DEMO_GUIDE.md  JARVIS_OMNISCIENT_README.md  LEARNING_SYSTEM.md  LICENSE  LOCK_IN_README.md  LOCK_IN_SUMMARY.md  MOBILE_HUB_GUIDE.md  NINTENDO_DS_SIMPLE_GUIDE.md  README.md  SECURITY.md  SETUP_GUIDE.md  SSJ_INFINITY_ARCHITECTURE.md  SSJ_INFINITY_FIXES.md  SSJ_INFINITY_SUMMARY.md  STUDY_COPILOT_README.md  STUDY_FEATURE_FIX_SUMMARY.md  YOUR_APPLE_MUSIC_SETUP.md  YOUTUBE_MUSIC_SUMMARY.md  env.example  jest.config.js  package-lock.json  package.json  seasonal-patch-notes.md  setup-env.sh  test-apple-music-integration.js  test-bot-start.js  test-complete-music-integration.js  test-course-materials.js  test-enhanced-pdf-analysis.js  test-halloween-midterm.js  test-natural-language.js  test-online-greeting.js  (+7 more)
.github/workflows/: deploy.yml
3kmlv-arcade/: APP_STORE_DEPLOYMENT_GUIDE.md  README.md  app.json  package.json
3kmlv-arcade/distribution/: README.md
course-materials/probability/: notes.txt  problems.txt
course-materials/robotics/: notes.txt  problems.txt
cpp-audio-engine/: CMakeLists.txt
cpp-audio-engine/include/: audio_engine.h
cpp-audio-engine/src/: audio_engine.cpp
docs/: 00_GUNNCHAI3K_TUTOR_VISION.md  01_TUTOR_PERSONA_AND_VOICE.md  02_KNOWLEDGE_SCOPE.md  03_SOURCE_GROUNDING_POLICY.md  04_SOCRATIC_TUTORING_POLICY.md  05_NO_CHEATING_AND_ACADEMIC_INTEGRITY.md  06_CHILD_SAFETY_AND_BOUNDARIES.md  07_WAIKE_CURRICULUM_INTEGRATION.md  08_SKILL_LEVEL_ROUTING.md  09_ASSESSMENT_GENERATION.md  10_RAG_ARCHITECTURE.md  11_AGENT_TOOLS_AND_GUARDRAILS.md  12_MULTILINGUAL_AND_TRANSLATION_POLICY.md  13_EVALUATION_AND_RED_TEAMING.md  14_DEPLOYMENT_OPTIONS.md  15_DISCORD_COMMANDS_AND_INTERACTIONS.md  16_DISCORD_INTENTS_AND_PRIVACY.md  17_WAIKE_KNOWLEDGE_INDEX_CONTRACT.md  18_STUDENT_DATA_RETENTION_POLICY.md  19_SERVER_ADMIN_GUIDE.md  AUDIT_FEATURE_MATRIX.md  DISCORD_LAUNCH_CHECKLIST.md  DISCORD_REACTIVATION_CHECKLIST.md  LAUNCH_PROOF.md  LAUNCH_READINESS_NOTES.md  LIVE_DISCORD_PROOF_CHECKLIST.md  NYU_GRADUATION_LAUNCH_MESSAGE.md  PHASE_2_AUDIT.md  PROOF_OF_OPERATION.md  WAIKE_INTEGRATION.md
gaming-hypervisor/: Cargo.toml  README.md  STEP_BY_STEP_MANUAL.md  build.sh
gaming-hypervisor/src/: ai_engine.rs  emulator.rs  game_generator.rs  graphics.rs  hypervisor.rs  input.rs  main.rs
knowledge/: README.md  curriculum_index.example.yaml  founder_knowledge_map_public.yaml  repo_index.example.yaml  standards_index.yaml  waike_course_index.example.yaml
prompts/: system_prompt_gunnchai3k.md
public/: nintendo-ds-simple.html
python-ai-bridge/: ai_bridge.py  requirements.txt
rust-backend/: Cargo.toml
rust-backend/src/: lib.rs
rust-performance/: Cargo.toml  build.sh
rust-performance/src/: lib.rs
scripts/: announce-nyu-grad.ts  build-ssj-infinity.sh
src/: index.ts  simple-bot.ts  ssj-infinity-engine.ts
src/announcements/: nyu-graduation-launch.ts  online-awake.ts
src/commands/: absorb.ts  feedback.ts  learning.ts  morning.ts
src/config/: startup.ts
src/discord/: permissions-config.ts
src/launch/: graduation-admin.ts
src/multiplayer/: bluetooth.ts  instant-joiner.ts  local-network.ts  nfc.ts  pictochat.ts
src/music/: apple-music-integration.ts  dj-playlist-manager.ts  jockie-powers.ts  music-service-manager.ts  spotify-integration.ts  youtube-music-manager.ts
src/responses/: mission-roadmap.ts
src/seasonal/: academic-calendar.ts  anniversary-celebration.ts  seasonal-events.ts  seasonal-manager.ts
src/security/: audit.ts
src/study/: auto-update.ts  bot.ts  cache.ts  compute.ts  course-integration.ts  emergency-bot.ts  emergency-test.ts  emergency.ts  enhanced-course-integration.ts  index.ts  ingest.ts  integrity.ts  jarvis-core.ts  jarvis-test.ts  lock-in-test.ts  lock-in.ts  pdf-visual-analyzer.ts  plan.ts  research.ts  ssj-infinity-test.ts  ssj-infinity.ts  storage.ts  test.ts  user-feedback-system.ts
tests/: basic.test.ts  integration.test.ts  launch-features.test.ts  online-awake.test.ts  reactivation.test.ts  setup.ts  simple-bot.test.ts  ssj-infinity.test.ts  youtube-music.test.ts
(+20 files in other folders)
