[package]
name = "gunnch-gaming-hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core game engine
bevy = "0.12"
wgpu = "0.18"
winit = "0.29"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# AI and ML for game generation
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = "0.15"

# Graphics and rendering
wgpu = "0.18"
wgpu-hal = "0.18"
wgpu-types = "0.18"
bytemuck = "1.14"

# Audio
rodio = "0.17"
cpal = "0.15"

# Input handling
gilrs = "0.10"
keyboard-types = "0.2"

# File I/O and networking
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.4"

# Logging and debugging
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Game generation and AI
openai = "0.1"
claude = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "gunnch-gaming-hypervisor"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

